# ddl-dump-generator-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml  rust.yml
src/: main.rs
