[package]
edition = "2021"
name    = "ddl-dump-generator"
description = "A simple CLI tool to sequentially generate a list of links "
version = "1.0.1"
authors = ["Matteo Danelon <dev@danelon.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clio = { version = "0.3.5", features = ["clap-parse"] }
url  = "2.5.0"
